[package]
name = "bins"
version = "0.1.0"
authors = ["Kyle Clemens <jkc.clemens@gmail.com>"]
build = "build.rs"

[dependencies]
config = "0.1.3"
argparse = "0.2.1"
hyper = "0.9"
rustc-serialize = "0.3.19"
error-chain = "0.1.12"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[build-dependencies]
git2 = "0.4.3"
rustc_version = "0.1.7"

[profile.release]
lto = true
